--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,120 +1,24 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: master publishes
-
-on:
-  push:
-    branches: 
-      - master
-
-jobs:
-################################################################################
-# Extension package and artifact on master
-####
-  extension-build:
-    runs-on: ubuntu-22.04
-
-    strategy:
-      matrix:
-        node-version: [18.x]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-      working-directory: report-react
-    - run: npm install
-      working-directory: accessibility-checker-extension
-    - run: npm install
-      working-directory: rule-server
-    - run: npm run build
-      working-directory: rule-server
-    - run: sed -i'.old' -e "s/[\"|']use strict[\"|']//g" ./exceljs.js
-      working-directory: accessibility-checker-extension/node_modules/exceljs/dist
-    - run: sed -i'.old' -e "s/[\"|']use strict[\"|']//g" ./exceljs.min.js
-      working-directory: accessibility-checker-extension/node_modules/exceljs/dist
-    - run: cp -f ./manifest_Chrome.json ./src/manifest.json
-      working-directory: accessibility-checker-extension
-    - run: npm run package:browser
-      working-directory: accessibility-checker-extension
-    - name: Upload packed extension
-      uses: actions/upload-artifact@v1
-      with:
-        name: accessibility-checker-extension for Chrome
-        path: accessibility-checker-extension/package/accessibility-checker-extension.zip
-    - run: cp -f ./manifest_Firefox.json ./src/manifest.json
-      working-directory: accessibility-checker-extension
-    - run: npm run package:browser
-      working-directory: accessibility-checker-extension
-    - name: Upload packed extension
-      uses: actions/upload-artifact@v1
-      with:
-        name: accessibility-checker-extension for Firefox
-        path: accessibility-checker-extension/package/accessibility-checker-extension.zip
-
-  act-results:
-    runs-on: ubuntu-22.04
-
-    strategy:
-      matrix:
-        node-version: [18.x]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-      working-directory: accessibility-checker-engine
-    - run: npm install
-      working-directory: report-react
-    - run: npm run build:all
-      working-directory: accessibility-checker-engine
-    - run: npm install
-      working-directory: rule-server
-    - run: npm run build
-      working-directory: rule-server
-    - run: node main.js &
-      working-directory: rule-server/dist
-    - run: sleep 10
-      working-directory: rule-server/dist
-    - run: npm install
-      working-directory: accessibility-checker
-    - run: npm run build
-      working-directory: accessibility-checker
-    - run: npm test
-      working-directory: accessibility-checker/test-act-w3
-    - name: Upload packed extension
-      uses: actions/upload-artifact@v1
-      with:
-        name: ACT Text Results
-        path: accessibility-checker/test-act-w3/act-report-v2.txt
-
-  rule-deploy:
-    runs-on: ubuntu-22.04
-
-    strategy:
-      matrix:
-        node-version: [18.x]
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm install
-      working-directory: rule-server
-    - run: npm run build
-      working-directory: rule-server
-    - run: gitactions/publish/rules.sh
-      env: 
-        BLUEMIX_USERID: apikey
-        BLUEMIX_PASS: ${{ secrets.BLUEMIX_PASS }}
-        CLOUD_PWD: ${{ secrets.CLOUD_PWD }}
-        TRAVIS_BRANCH: master
+            - name: Setup Node.js environment
+  uses: actions/setup-node@v4.0.1
+  with:
+    # Set always-auth in npmrc.
+    always-auth: # optional, default is false
+    # Version Spec of the version to use. Examples: 12.x, 10.15.1, >=10.15.0.
+    node-version: # optional
+    # File containing the version Spec of the version to use.  Examples: package.json, .nvmrc, .node-version, .tool-versions.
+    node-version-file: # optional
+    # Target architecture for Node to use. Examples: x86, x64. Will use system architecture by default.
+    architecture: # optional
+    # Set this option if you want the action to check for the latest available version that satisfies the version spec.
+    check-latest: # optional
+    # Optional registry to set up for auth. Will set the registry in a project level .npmrc and .yarnrc file, and set up auth to read in from env.NODE_AUTH_TOKEN.
+    registry-url: # optional
+    # Optional scope for authenticating against scoped registries. Will fall back to the repository owner when using the GitHub Packages registry (https://npm.pkg.github.com/).
+    scope: # optional
+    # Used to pull node distributions from node-versions. Since there's a default, this is typically not supplied by the user. When running this action on github.com, the default value is sufficient. When running on GHES, you can pass a personal access token for github.com if you are experiencing rate limiting.
+    token: # optional, default is ${{ github.server_url == 'https://github.com' && github.token || '' }}
+    # Used to specify a package manager for caching in the default directory. Supported values: npm, yarn, pnpm.
+    cache: # optional
+    # Used to specify the path to a dependency file: package-lock.json, yarn.lock, etc. Supports wildcards or a list of file names for caching multiple dependencies.
+    cache-dependency-path: # optional
+          
